# GCodeGenerator

./: .gitignore  MANIFEST.in  README.md  example.py  gcodeGenerator.py  pyproject.toml
gcode_generator/: __init__.py  fdm_material.py  gcode_generator.py  machine.py  vector.py
gcode_generator/gcode_writer/: __init__.py  griffin_writer.py  ufp_writer.py
gcode_generator/plugins/: README.md  __init__.py  patterns.py
tests/: test_plugins.py
